LABELS/DaemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging-daemonset
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
        - name: logging-agent
          image: fluentd:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
          volumeMounts:
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
