LABELS/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  labels:
    app: web
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: web
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
